force-app/main/default/objects/User/fields/Corporate_Email__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Email__c</fullName>
    <label>Corporate Email</label>
    <type>Email</type>
</CustomField>