force-app/main/default/objects/User/fields/Has_Mappings_Record__c.field-meta.xml
<CustomField>
    <fullName>Has_Mappings_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Mappings Record</label>
    <type>Checkbox</type>
</CustomField>