force-app/main/default/objects/User/fields/License_Info__c.field-meta.xml
<CustomField>
    <fullName>License_Info__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Info</label>
    <type>Text</type>
</CustomField>