force-app/main/default/objects/User/fields/Team_Function__c.field-meta.xml
<CustomField>
    <fullName>Team_Function__c</fullName>
    <label>Team Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>